--- a/src/Views/fTonKho.form
+++ b/src/Views/fTonKho.form
@@ -224,6 +224,9 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldTimKiemKeyReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
